# ratlib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci-linux-clang.yml  ci-linux-gcc.yml  ci-macos-clang.yml  ci-macos-latest-clang.yml  ci-ubuntu-latest-clang.yml  ci-ubuntu-latest-gcc.yml  ci-windows-latest.yml  ci-windows.yml  ci.yml
benchmarks/: CMakeLists.txt  bench.h  bench_ralcArena.c  bench_ralcGen.c  bench_ralcPool.c  bench_rdyn.c  bench_rlist.c  bench_rmap.c  bench_rring.c  main.c
rat/: CMakeLists.txt  rat_config.h.in
rat/include/rat/: common.h  extra.h  ralc.h  ralcArena.h  ralcCustom.h  ralcGen.h  ralcPool.h  rarr.h  rat_config.h.in  rbit.h  rcmp.h  rcrc.h  rdyn.h  rhash.h  rlist.h  rmap.h  rorder.h  rring.h
rat/src/: ralc.c  ralcArena.c  ralcCustom.c  ralcGen.c  ralcPool.c  rat_ralc.c  rat_ralcArena.c  rat_ralcCustom.c  rat_ralcGen.c  rat_ralcPool.c  rat_rarr.c  rat_rcmp.c  rat_rcrc.c  rat_rdyn.c  rat_rhash.c  rat_rlist.c  rat_rmap.c  rat_rorder.c  rat_rring.c  rcmp.c  rcrc.c  rdyn.c  rlist.c  rmap.c  rring.c
tests/: CMakeLists.txt  main.c  test.h  test_ralcArena.c  test_ralcPool.c  test_rarr.c  test_rbit.c  test_rcmp.c  test_rcrc.c  test_rdyn.c  test_rhash.c  test_rlist.c  test_rmap.c  test_rorder.c  test_rring.c
